[package]
name = "odbc-secrets-lib"
authors = ["Samuel Marks <@SamuelMarks>"]
version = "0.0.1"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
clap = { version = "*", optional = true }
csv = "1.3.0"
log = "0.4.22"
odbc-api = "8.1.4"
serde_json = "1.0.125"
strum_macros = "0.26.4"
vaultrs = "0.7.2"
